# Frontier-AI-Radar

./: .gitignore  17thMarchMeeting.txt  Dockerfile  README.md  docker-compose.yml  meeting_13th_march.txt  meeting_with_Harshit_16thmarch.txt  nginx.conf  persona_prompt.md
Backend/: CONTEXT_HANDOFF.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml  requirements.txt  run.py  test_openrouter.py  test_pipeline.py
Backend/agents/: __init__.py  audiobook_formatter.py  base_agent.py  benchmark_intel.py  chat_agent.py  competitor_intel.py  digest.py  mission_controller.py  model_intel.py  notification.py  ranking.py  report_generator.py  research_intel.py  schemas.py  strategy_planner.py  verification.py
Backend/api/: main.py  voice.py
Backend/cache/: redis_client.py
Backend/compiler/: __init__.py
Backend/config/: research_sources.py  scoring.yaml  settings.py  sources.yaml
Backend/core/: __init__.py  change_detector.py  context_manager.py  embedder.py  embedding_executor.py  extractor.py  fetcher.py  foundation_model_config.py  foundation_model_releases.py  hf_benchmark_config.py  hf_benchmark_tracker.py  ranker.py  research_crawler.py  sentence_streamer.py  stt.py  summarizer.py  tools.py  tts_stream.py
Backend/db/: chat.py  connection.py  init.sql  models.py  persist.py
Backend/memory/: __init__.py  entity_store.py  long_term.py  schemas.py  short_term.py
Backend/pipeline/: __init__.py  graph.py  retry.py  router.py  runner.py  scheduler.py  state.py
Backend/research_documents/: FInalArchitectureDesign.html  PDF.html  cursor_fix_prompt.md  (+3 more)
(+124 files in other folders)
